fix des bugs dans l'ffichage de crud
