# routes/api.php
@@ -1,0 +1,12 @@
+<?php
+
+use App\Http\Controllers\BookController;
+use Illuminate\Support\Facades\Route;
+
+    Route::get('/books', [BookController::class, 'index']);
+    Route::get('/books/{id}', [BookController::class, 'show']);
+    Route::post('books', [BookController::class, 'store']);
+    Route::put('/books/{id}', [BookController::class, 'update']);
+    Route::delete('/books/{id}', [BookController::class, 'destroy']);
+
+
